force-app/main/default/objects/Claim_Approval_Log__c/Claim_Approval_Log__c.object-meta.xml
<CustomObject>
    <description>Audit trail for every approval decision made on a Warranty Claim — captures channel (Slack/Email), AI recommendation, approver, and timestamp.</description>
    <label>Claim Approval Log</label>
    <nameField>
        <displayFormat>CAL-{0000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claim Approval Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>