force-app/main/default/objects/Claim_Approval_Log__c/fields/Agentforce_Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Agentforce_Session_Id__c</fullName>
    <description>Links this approval back to the AI_Interaction_Log__c session.</description>
    <label>Agentforce Session ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>