force-app/main/default/objects/Claim_Approval_Log__c/fields/AI_Confidence_Score__c.field-meta.xml
<CustomField>
    <fullName>AI_Confidence_Score__c</fullName>
    <description>0-100 score from Agentforce indicating confidence in the recommendation.</description>
    <label>AI Confidence Score (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>