force-app/main/default/objects/Claim_Approval_Log__c/fields/AI_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>AI_Recommendation__c</fullName>
    <description>The recommendation generated by Agentforce before the approver made their decision.</description>
    <label>AI Recommendation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>