force-app/main/default/objects/Claim_Approval_Log__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Approval Logs</relationshipLabel>
    <relationshipName>Approver_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>