force-app/main/default/objects/Claim_Approval_Log__c/fields/Claim__c.field-meta.xml
<CustomField>
    <fullName>Claim__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Claim</label>
    <referenceTo>Claim</referenceTo>
    <relationshipLabel>Approval Logs</relationshipLabel>
    <relationshipName>Approval_Logs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>