force-app/main/default/objects/Claim_Approval_Log__c/fields/Dealer_Account__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Denormalised dealer reference for quick reporting without joining through Claim.</description>
    <label>Dealer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Approval Logs</relationshipLabel>
    <relationshipName>Dealer_Approval_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>