force-app/main/default/objects/Claim_Approval_Log__c/fields/Decision_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Decision_DateTime__c</fullName>
    <label>Decision Date/Time</label>
    <type>DateTime</type>
</CustomField>